--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,32 @@
     max-height: 0px;
   }
 }
+
+/* Slick carousel */
+
+.custom-dots {
+  height: 80px !important;
+  bottom: -80px !important;
+}
+
+.custom-dots > li {
+  width: 80px !important;
+  height: 80px !important;
+}
+
+.carousel .slick-arrow.slick-prev,
+.carousel .slick-arrow.slick-next {
+  background: #fcfcfc;
+  width: 47px;
+  height: 104px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  box-shadow: 1px 2px 10px -1px rgb(0 0 0 / 30%);
+}
+
+.slick-prev::before,
+.slick-next::before {
+  display: none;
+}
